[package]
name = "dpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "*"
reqwest = "*"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
etcetera = "0.8.0"
once_cell = "1.18"
anyhow = "1.0"
toml_edit = "0.20.2"
